new octave scripts and python bloch script is done

--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -17,6 +17,18 @@ url = {http://arxiv.org/abs/1409.3097},
 year = {2014}
 }
 
+@article{decell1975generalized,
+  title={THE GENERALIZED INVERSE, WITH NONLINEAR REGRESSION AND MATHEMATICAL PROGRAMMING APPLICATIONS},
+  author={Decell, Henry P and McHenry, Elric N},
+  journal={Decision Sciences},
+  volume={6},
+  number={2},
+  pages={346--359},
+  year={1975},
+  publisher={Wiley Online Library}
+}
+
+
 @article{Schuld2016,
 archivePrefix = {arXiv},
 arxivId = {1601.07823},
