end of week before QIPCC countdown

--- a/Latex/QIPCCtalk_latex/demo.tex
+++ b/Latex/QIPCCtalk_latex/demo.tex
@@ -13,7 +13,7 @@
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
 \title{Putting quantum machine learning algorithms to the test}
-\subtitle{QIPCC conference 2016, Cape Town, South Africa}
+\subtitle{4th QIPCC conference, 2016 \newline Cape Town, South Africa}
 % \date{\today}
 \date{}
 \author{Mark Fingerhuth}
