--- a/Latex/QIPCCtalk_latex/demo.bib
+++ b/Latex/QIPCCtalk_latex/demo.bib
@@ -1,43 +1,7 @@
-@article{Knuth92,
-        author = "D.E. Knuth",
-        title = "Two notes on notation",
-        journal = "Amer. Math. Monthly",
-        volume = "99",
-        year = "1992",
-        pages = "403--422",
-}
-
-@book{ConcreteMath,
-        author = "R.L. Graham and D.E. Knuth and O. Patashnik",
-        title = "Concrete mathematics",
-        publisher = "Addison-Wesley",
-        address = "Reading, MA",
-        year = "1989"
-}
-
-@unpublished{Simpson,
-        author = "H. Simpson",
-        title = "Proof of the {R}iemann {H}ypothesis",
-        note = "preprint (2003), available at
-        \texttt{http://www.math.drofnats.edu/riemann.ps}",
-        year = "2003"
-}
-
-@incollection{Er01,
-        author = "P. Erd{\H o}s",
-        title = "A selection of problems and results in combinatorics",
-        booktitle = "Recent trends in combinatorics (Matrahaza, 1995)",
-        publisher = "Cambridge Univ. Press",
-        address = "Cambridge",
-        pages = "1--6",
-        year = "1995"
-}
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
+@misc{bigdata,
+author={IBM},
+title = {What is big data?},
+howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
+note = {Accessed: 2016-09-08},
+year={2016}
 }
